# tonic_pb_jelly

./: Cargo.toml  LICENSE  README.md
pb-jelly-gen/: Cargo.toml
pb-jelly-gen/src/: main.rs
proto/: helloworld.proto
tonic-helloworld/: Cargo.toml  build.rs
tonic-helloworld/src/: client.rs  server.rs
tonic-pb-jelly/: Cargo.toml  build.rs
tonic-pb-jelly/src/: client.rs  codec.rs  common.rs  main.rs
